Fix precommit and a couple small code suggestions